--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#">Career</a>
             <a href="#">Pricing</a>
             <a href="#">Blog</a>
-            <a href="#">About</a>
+            <a href="/pages/about.html">About</a>
             <a href="/pages/contactus.html" target="_blank">Contact Us</a>
         </div>
     </nav>
