--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Navigation Bar -->
     <nav class="nav">
         <a href="/" class="logo-link">
-            <img class ="logo" src="/assets/images/instincthub-logo.svg" alt="Instincthub">
+            <img class ="logo" src="/assets/images/instincthub-logo.svg" alt="Instincthub is here">
         </a>
         <div class="hamburger">
             <span class="line"></span>
