addition of perfect image div

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="line"></span>
             <span class="line"></span> 
         </div>
-
+        
         <div class="nav__link hide">
             <a href="#">Courses</a>
             <a href="#">Career</a>
@@ -31,6 +31,7 @@
     </nav>
 </header>
 
+    <div class="image">
     <div class="title-banner">
         <div class="container">
             <h1>Instincthub Demo</h1>
@@ -74,7 +75,7 @@
                 the capital of Abuja that's pictured on the national currency.
             </p>
         </div>
-        
+       </div> 
     </div>
 
     <script src="/assets/js/script.js"></script>
